# my-diary

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
scheduling/: install.sh  my-diary.service  my-diary.timer
src/my_diary/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
src/my_diary/auth/: google_oauth.py
src/my_diary/collectors/: __init__.py  base.py  filesystem.py  gitlab.py  gmail.py  google_cal.py  google_drive.py  linear.py  local_git.py  notion.py  obsidian_note.py  slack.py  terminal.py  weather.py
src/my_diary/synthesis/: __init__.py  engine.py  prompts.py
src/my_diary/writers/: __init__.py  base.py  markdown.py  notion.py  obsidian.py
templates/: daily_note.md.j2
